--- a/app/src/main/res/layout/activity_return_bike.xml
+++ b/app/src/main/res/layout/activity_return_bike.xml
@@ -5,6 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/returnBikeContainer"
         tools:context=".ReturnBikeActivity">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -21,7 +22,8 @@
                 app:title="@string/confirmar_devolucao"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="@color/colorPrimary"/>
+                app:titleTextColor="@color/dark_gray"
+                android:background="@color/white"/>
 
     </com.google.android.material.appbar.AppBarLayout>
     <ImageView
