--- a/app/src/main/res/layout/activity_ride_quiz.xml
+++ b/app/src/main/res/layout/activity_ride_quiz.xml
@@ -30,6 +30,9 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="0dp">
 
@@ -41,19 +44,19 @@
                     android:layout_height="wrap_content"
                     android:inputType="textPersonName"
                     android:ems="10"
-                    android:id="@+id/destionation" android:layout_marginStart="16dp"
+                    android:id="@+id/quizDestination"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
-                    android:layout_marginEnd="16dp"
+                    app:layout_constraintStart_toStartOf="parent"
+
                     app:layout_constraintEnd_toEndOf="parent" android:hint="@string/withdrawal_quiz_destiny_hint"/>
 
             <TextView
                     android:text="@string/withdrawal_bicycle_rating_question"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/destionation"
+                    android:id="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/quizDestination"
                     android:layout_marginStart="8dp" android:layout_marginTop="16dp"
-                    app:layout_constraintTop_toBottomOf="@+id/destionation" android:textSize="18sp"/>
+                    app:layout_constraintTop_toBottomOf="@+id/quizDestination" android:textSize="18sp"/>
 
             <RadioGroup
                     android:layout_width="wrap_content"
@@ -97,7 +100,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" android:id="@+id/buyCheck" android:layout_weight="1"/>
                 <RadioButton
-                        android:text="@string/trip_reason"
+                        android:text="@string/trip_reason_to_work"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" android:id="@+id/workCheck" android:layout_weight="1"/>
                 <RadioButton
