--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -30,128 +30,71 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <ProgressBar
+                android:id="@+id/progressBar"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="0dp"
                 android:indeterminate="true"
                 android:layout_height="wrap_content"
-                android:id="@+id/progressBar" app:layout_constraintStart_toStartOf="parent"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/appBarLayout" android:visibility="gone"/>
+                app:layout_constraintTop_toBottomOf="@+id/appBarLayout"/>
 
-        <TextView
-                android:text="@string/complete_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView" android:layout_marginTop="24dp"
+        <ImageView
+                android:id="@+id/profileImageView"
+                android:layout_width="120dp"
+                android:background="@color/grey"
+                android:layout_height="120dp"
+                android:layout_marginTop="16dp"
+                app:srcCompat="@drawable/ic_image"
+                android:padding="6dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="16dp"/>
-        <EditText
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        <ImageButton
+                android:id="@+id/editProfilePhotoButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:ems="10"
-                android:id="@+id/completeNameField"
-                app:layout_constraintStart_toStartOf="@+id/textView"
-                android:layout_marginTop="12dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView"
-                android:hint="Ned Ludd"/>
+                app:srcCompat="@drawable/ic_edit_white_24dp"
+                style="@style/bprButton.image"
+                android:layout_marginStart="8dp"
+                android:visibility="visible"
+                app:layout_constraintTop_toTopOf="@+id/profileImageView"
+                app:layout_constraintLeft_toRightOf="@id/profileImageView"
+                app:layout_constraintBottom_toBottomOf="@+id/profileImageView"/>
 
-        <ImageView
-                android:layout_width="80dp"
-                android:background="@color/grey"
-                android:layout_height="80dp"
-                android:id="@+id/profileImageView" android:layout_marginTop="8dp"
-                app:layout_constraintEnd_toStartOf="@id/editProfilePhotoButton"
-                android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/completeNameField"
-                android:layout_marginStart="4dp" app:layout_constraintTop_toTopOf="@+id/textView"
-                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/completeNameField"
-                android:src="@drawable/ic_image" android:padding="6dp"/>
-
-        <ImageView
-                android:layout_width="80dp"
-                android:background="@color/grey"
-                android:layout_height="80dp"
-                android:id="@+id/idImageView"
-                app:layout_constraintStart_toEndOf="@+id/idNumberField"
-                android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/idNumberField"
-                android:src="@drawable/ic_image" android:padding="6dp"
-                app:layout_constraintBottom_toBottomOf="@+id/idNumberField"
-                app:layout_constraintEnd_toStartOf="@+id/editIdPhotoButton" android:layout_marginEnd="8dp"/>
-
-        <ImageView
-                android:layout_width="80dp"
-                android:background="@color/grey"
-                android:layout_height="80dp"
-                android:id="@+id/residenceProofImageView"
-                app:layout_constraintStart_toEndOf="@+id/addressField"
-                android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/addressField"
-                android:src="@drawable/ic_image" android:padding="6dp"
-                app:layout_constraintBottom_toBottomOf="@+id/addressField"
-                app:layout_constraintEnd_toStartOf="@+id/editResidencePhotoButton" android:layout_marginEnd="8dp"/>
-
-        <RadioGroup android:layout_width="match_parent"
-                    android:id="@+id/radioGroup"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    app:layout_constraintTop_toBottomOf="@+id/completeNameField"
-                    app:layout_constraintLeft_toLeftOf="@id/completeNameField"
-                    android:layout_marginLeft="16dp">
-
-            <RadioButton android:id="@+id/rgCheck"
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:text="RG"/>
-            <RadioButton android:id="@+id/cpfCheck"
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:text="CPF"/>
-        </RadioGroup>
-
-        <TextView
-                android:text="Número de RG"
-                android:layout_width="wrap_content"
-                android:id="@+id/idTitle"
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/completeNameLayout"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="16dp"/>
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_marginTop="16dp"
+                android:hint="@string/complete_name"
+                app:layout_constraintTop_toBottomOf="@id/profileImageView"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent">
 
-        <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:ems="10"
-                android:id="@+id/idNumberField"
-                app:layout_constraintStart_toStartOf="@+id/idTitle" android:layout_marginTop="12dp"
-                app:layout_constraintTop_toBottomOf="@+id/idTitle" android:hint="0000000"/>
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/completeNameField"
+                    android:inputType="textPersonName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
 
-        <TextView
-                android:text="Endereço"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/addressTitle" android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/idNumberField"
-                app:layout_constraintStart_toStartOf="@+id/idNumberField"/>
-        <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:ems="10"
-                android:id="@+id/addressField" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/addressTitle"
-                app:layout_constraintStart_toStartOf="@+id/addressTitle"
-                android:hint="Rua, número"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
 
         <RadioGroup android:layout_width="match_parent"
-                    android:id="@+id/gender"
+                    android:id="@+id/genderRadioGroup"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
-                    app:layout_constraintTop_toBottomOf="@id/addressField"
-                    app:layout_constraintLeft_toLeftOf="@id/completeNameField"
-                    android:layout_marginLeft="16dp">
+                    android:layout_marginLeft="16dp"
+                    app:layout_constraintTop_toBottomOf="@id/completeNameLayout"
+                    app:layout_constraintLeft_toLeftOf="@id/completeNameLayout">
 
             <RadioButton android:id="@+id/maleCheck"
                          android:layout_width="wrap_content"
@@ -171,43 +114,141 @@
                          android:text="Prefere não responder"/>
         </RadioGroup>
 
-        <Button android:layout_width="0dp" android:layout_height="wrap_content"
-                android:id="@+id/saveButton"
-                android:text="Adicionar pessoa"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
-                app:layout_constraintTop_toBottomOf="@id/gender"
-                android:layout_marginTop="32dp"
-                app:layout_constraintBottom_toBottomOf="parent" style="@style/bprButton"/>
-        <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_edit_white_24dp"
-                android:id="@+id/editProfilePhotoButton"
-                app:layout_constraintEnd_toEndOf="parent"
+
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/addressLayout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                style="@style/bprButton.image"
-                app:layout_constraintTop_toTopOf="@+id/profileImageView"
-                app:layout_constraintBottom_toBottomOf="@+id/profileImageView" android:visibility="gone"/>
-        <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_edit_white_24dp"
-                android:id="@+id/editIdPhotoButton"
-                style="@style/bprButton.image"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintTop_toTopOf="@+id/idImageView"
-                app:layout_constraintBottom_toBottomOf="@+id/idImageView" android:visibility="gone"/>
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_marginTop="16dp"
+                android:hint="Endereço (Rua, número)"
+                app:layout_constraintTop_toBottomOf="@id/genderRadioGroup"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/addressField"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <ImageView
+                android:id="@+id/residenceProofImageView"
+                android:layout_width="120dp"
+                android:background="@color/grey"
+                android:layout_height="120dp"
+                app:srcCompat="@drawable/ic_image"
+                android:padding="6dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@id/addressLayout"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+        />
 
         <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_edit_white_24dp"
                 android:id="@+id/editResidencePhotoButton"
+                android:layout_width="wrap_content"
+                android:visibility="visible"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_edit_white_24dp"
                 style="@style/bprButton.image"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
                 app:layout_constraintTop_toTopOf="@+id/residenceProofImageView"
-                app:layout_constraintBottom_toBottomOf="@+id/residenceProofImageView" android:visibility="gone"/>
+                app:layout_constraintLeft_toRightOf="@id/residenceProofImageView"
+                app:layout_constraintBottom_toBottomOf="@+id/residenceProofImageView"
+                tools:layout_editor_absoluteX="356dp"/>
+
+
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/idLayout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_marginTop="16dp"
+                android:hint="Número do RG ou CPF"
+                app:layout_constraintTop_toBottomOf="@id/residenceProofImageView"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/idNumberField"
+                    android:inputType="number"
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline"
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintGuide_percent="0.5"/>
+
+
+        <ImageView
+                android:id="@+id/idFrontImageView"
+                android:layout_width="120dp"
+                android:background="@color/grey"
+                android:layout_height="120dp"
+                android:padding="6dp"
+                android:layout_marginTop="16dp"
+                app:srcCompat="@drawable/ic_image"
+                app:layout_constraintTop_toBottomOf="@id/idLayout"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="@id/guideline"/>
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Frente"
+                android:layout_marginTop="4dp"
+                app:layout_constraintTop_toBottomOf="@id/idFrontImageView"
+                app:layout_constraintLeft_toLeftOf="@id/idFrontImageView"
+                app:layout_constraintRight_toRightOf="@id/idFrontImageView"/>
+
+        <ImageView
+                android:id="@+id/idBackImageView"
+                android:layout_width="120dp"
+                android:background="@color/grey"
+                android:layout_height="120dp"
+                android:padding="6dp"
+                android:layout_marginTop="16dp"
+                app:srcCompat="@drawable/ic_image"
+                app:layout_constraintTop_toBottomOf="@id/idLayout"
+                app:layout_constraintLeft_toLeftOf="@id/guideline"
+                app:layout_constraintRight_toRightOf="parent"/>
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Verso"
+                android:layout_marginTop="4dp"
+                app:layout_constraintTop_toBottomOf="@id/idBackImageView"
+                app:layout_constraintLeft_toLeftOf="@id/idBackImageView"
+                app:layout_constraintRight_toRightOf="@id/idBackImageView"/>
+
+
+        <Button
+                android:id="@+id/saveButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Adicionar pessoa"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="32dp"
+                style="@style/bprButton"
+                app:layout_constraintTop_toBottomOf="@id/idFrontImageView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
