--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -43,10 +43,9 @@
         <ImageView
                 android:id="@+id/profileImageView"
                 android:layout_width="120dp"
-                android:background="@color/grey"
                 android:layout_height="120dp"
                 android:layout_marginTop="16dp"
-                app:srcCompat="@drawable/ic_image"
+                app:srcCompat="@drawable/iconfinder_user_profile_image"
                 android:padding="6dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
@@ -61,7 +60,7 @@
                 app:srcCompat="@drawable/ic_edit_white_24dp"
                 style="@style/bprButton.image"
                 android:layout_marginStart="8dp"
-                android:visibility="visible"
+                android:visibility="gone"
                 app:layout_constraintTop_toTopOf="@+id/profileImageView"
                 app:layout_constraintLeft_toRightOf="@id/profileImageView"
                 app:layout_constraintBottom_toBottomOf="@+id/profileImageView"/>
@@ -138,9 +137,8 @@
         <ImageView
                 android:id="@+id/residenceProofImageView"
                 android:layout_width="120dp"
-                android:background="@color/grey"
                 android:layout_height="120dp"
-                app:srcCompat="@drawable/ic_image"
+                app:srcCompat="@drawable/iconfinder_document"
                 android:padding="6dp"
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@id/addressLayout"
@@ -151,7 +149,7 @@
         <ImageButton
                 android:id="@+id/editResidencePhotoButton"
                 android:layout_width="wrap_content"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/ic_edit_white_24dp"
                 style="@style/bprButton.image"
@@ -195,11 +193,10 @@
         <ImageView
                 android:id="@+id/idFrontImageView"
                 android:layout_width="120dp"
-                android:background="@color/grey"
                 android:layout_height="120dp"
                 android:padding="6dp"
                 android:layout_marginTop="16dp"
-                app:srcCompat="@drawable/ic_image"
+                app:srcCompat="@drawable/iconfinder_id_profile_female"
                 app:layout_constraintTop_toBottomOf="@id/idLayout"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="@id/guideline"/>
@@ -216,11 +213,10 @@
         <ImageView
                 android:id="@+id/idBackImageView"
                 android:layout_width="120dp"
-                android:background="@color/grey"
                 android:layout_height="120dp"
                 android:padding="6dp"
                 android:layout_marginTop="16dp"
-                app:srcCompat="@drawable/ic_image"
+                app:srcCompat="@drawable/iconfinder_document"
                 app:layout_constraintTop_toBottomOf="@id/idLayout"
                 app:layout_constraintLeft_toLeftOf="@id/guideline"
                 app:layout_constraintRight_toRightOf="parent"/>
