--- a/app/src/main/res/layout/activity_add_bike.xml
+++ b/app/src/main/res/layout/activity_add_bike.xml
@@ -3,7 +3,7 @@
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            tools:context=".AddBikeActivity"
+            tools:context=".screens.addbicycle.AddBikeActivity"
             android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
