--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -8,7 +8,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".AddUserActivity">
+            tools:context=".screens.adduser.AddUserActivity">
 
         <com.google.android.material.appbar.AppBarLayout
                 android:id="@+id/appBarLayout"
