--- a/app/src/main/res/layout/activity_bicycle_withdraw.xml
+++ b/app/src/main/res/layout/activity_bicycle_withdraw.xml
@@ -5,6 +5,6 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".BicycleWithdrawActivity">
+        tools:context=".screens.bicyclewithdrawal.choosebicycle.BicycleWithdrawActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
