--- a/app/src/main/res/layout/activity_rent.xml
+++ b/app/src/main/res/layout/activity_rent.xml
@@ -3,13 +3,13 @@
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            tools:context=".WithdrawActivity"
+            tools:context=".screens.bicyclewithdrawal.choosebicycle.WithdrawActivity"
             android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".AddUserActivity">
+            tools:context=".screens.adduser.AddUserActivity">
 
         <com.google.android.material.appbar.AppBarLayout
                 android:id="@+id/appBarLayout"
