--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
         tools:context=".screens.login.LoginActivity">
 
     <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/appBarLayout"
+            android:id="@+id/app_bar_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/AppTheme.AppBarOverlay"
@@ -29,10 +29,10 @@
     <ImageView
             android:layout_width="160dp"
             android:id="@+id/bpr_logo"
-            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
+            app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/loginButton"
+            app:layout_constraintBottom_toBottomOf="@+id/login_button"
             android:layout_height="160dp"
             android:src="@drawable/logo"/>
 
@@ -42,7 +42,7 @@
             android:background="@color/colorPrimary"
             android:textColor="@color/white"
             android:layout_height="wrap_content"
-            android:id="@+id/loginButton"
+            android:id="@+id/login_button"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent"
