--- a/app/src/main/res/layout/activity_add_community.xml
+++ b/app/src/main/res/layout/activity_add_community.xml
@@ -1,8 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/apk/res-auto" >
+
+    <data>
+
+        <import type="android.view.View"/>
+        
+        <variable
+                name="viewModel"
+                type="app.igormatos.botaprarodar.screens.createcommunity.AddCommunityViewModel" />
+
+        <variable
+                name="community"
+                type="app.igormatos.botaprarodar.network.Community" />
+    </data>
+
+<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -37,7 +51,8 @@
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:id="@+id/communityNameInput"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="@={community.name}"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -54,7 +69,8 @@
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:id="@+id/communityDescriptionInput"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="@={community.description}"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -71,7 +87,8 @@
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:id="@+id/communityAddressInput"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="@={community.address}"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -87,7 +104,8 @@
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:id="@+id/communityOrgNameInput"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="@={community.org_name}"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -105,7 +123,8 @@
                 android:layout_width="match_parent"
                 android:inputType="textEmailAddress"
                 android:id="@+id/communityOrgEmailInput"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="@={community.org_email}"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -115,6 +134,9 @@
             android:id="@+id/addCommunityButton"
             android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:onClick="@{() -> viewModel.addCommunity()}"/>
 
 </LinearLayout>
+
+</layout>
