--- a/app/src/main/res/layout/activity_add_community.xml
+++ b/app/src/main/res/layout/activity_add_community.xml
@@ -1,22 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto" >
-
-    <data>
-
-        <import type="android.view.View"/>
-        
-        <variable
-                name="viewModel"
-                type="app.igormatos.botaprarodar.screens.createcommunity.AddCommunityViewModel" />
-
-        <variable
-                name="community"
-                type="app.igormatos.botaprarodar.network.Community" />
-    </data>
 
 <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -51,8 +38,7 @@
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:id="@+id/communityNameInput"
-                android:layout_height="wrap_content"
-                android:text="@={community.name}"/>
+                android:layout_height="wrap_content" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -69,8 +55,7 @@
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:id="@+id/communityDescriptionInput"
-                android:layout_height="wrap_content"
-                android:text="@={community.description}"/>
+                android:layout_height="wrap_content" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -87,8 +72,7 @@
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:id="@+id/communityAddressInput"
-                android:layout_height="wrap_content"
-                android:text="@={community.address}"/>
+                android:layout_height="wrap_content" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -104,8 +88,7 @@
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:id="@+id/communityOrgNameInput"
-                android:layout_height="wrap_content"
-                android:text="@={community.org_name}"/>
+                android:layout_height="wrap_content" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -123,8 +106,7 @@
                 android:layout_width="match_parent"
                 android:inputType="textEmailAddress"
                 android:id="@+id/communityOrgEmailInput"
-                android:layout_height="wrap_content"
-                android:text="@={community.org_email}"/>
+                android:layout_height="wrap_content" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -134,9 +116,6 @@
             android:id="@+id/addCommunityButton"
             android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
-            android:layout_height="wrap_content"
-            android:onClick="@{() -> viewModel.addCommunity()}"/>
+            android:layout_height="wrap_content" />
 
 </LinearLayout>
-
-</layout>
