--- a/app/src/main/res/layout/activity_add_bike.xml
+++ b/app/src/main/res/layout/activity_add_bike.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/containerAddBike"
             android:layout_width="match_parent"
             tools:context=".screens.addbicycle.AddBikeActivity"
             android:layout_height="match_parent">
