add PasswordRecoveryFragment and add it to nav graph

--- a/app/src/main/res/navigation/authentication_nav_graph.xml
+++ b/app/src/main/res/navigation/authentication_nav_graph.xml
@@ -32,4 +32,9 @@
                 android:id="@+id/action_emailValidationFragment_to_signInFragment"
                 app:destination="@id/signInFragment" />
     </fragment>
+    <fragment
+            android:id="@+id/passwordRecoveryFragment"
+            android:name="app.igormatos.botaprarodar.presentation.authentication.PasswordRecoveryFragment"
+            android:label="Recuperar Senha"
+            tools:layout="@layout/fragment_password_recovery" />
 </navigation>
