Updates view model and fragment with email and password validations and registration complete dialog

--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -22,7 +22,7 @@
             app:layout_constraintTop_toBottomOf="@+id/password_layout" />
 
     <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/name_layout"
+            android:id="@+id/email_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
@@ -32,35 +32,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/email_layout">
-
-        <EditText
-                android:id="@+id/full_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/prompt_full_name"
-                android:imeActionLabel="@string/prompt_full_name"
-                android:imeOptions="actionNext"
-                android:inputType="text"
-                android:selectAllOnFocus="true"
-                />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/email_layout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
-            app:boxBackgroundColor="@color/white"
-            app:layout_constraintBottom_toTopOf="@+id/name_layout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -78,20 +52,19 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
-            app:passwordToggleEnabled="true"
+            app:errorContentDescription="@string/promt_password_min_length_warning"
             app:boxBackgroundColor="@color/white"
-            app:counterEnabled="true"
             app:layout_constraintBottom_toTopOf="@+id/save"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/name_layout">
+            app:layout_constraintTop_toBottomOf="@+id/email_layout"
+            app:passwordToggleEnabled="true">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/prompt_password"
+                android:hint="@string/prompt_password_registration"
                 android:imeActionLabel="@string/action_sign_in_or_register"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword"
@@ -99,7 +72,7 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <ProgressBar
+    <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/loading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -109,8 +82,11 @@
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="64dp"
             android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/password_layout"
-            app:layout_constraintStart_toStartOf="@+id/password_layout"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.3"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/multi_color_progress_bar"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
